force-app/main/default/objects/CCR_JITUserProvisioning__mdt/CCR_JITUserProvisioning__mdt.object-meta.xml
<CustomObject>
    <description>Used by : CCR Description : To be used  in JIT user creation/update.</description>
    <label>CCR JITUserProvisioning</label>
    <pluralLabel>CCR JITUserProvisionings</pluralLabel>
</CustomObject>