force-app/main/default/objects/CCR_JITUserProvisioning__mdt/fields/CCR_Active__c.field-meta.xml
<CustomField>
    <fullName>CCR_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used by : CCR Description : Used to store mapping for JIT user creation/update</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>