force-app/main/default/objects/CCR_JITUserProvisioning__mdt/fields/CCR_PermissionSet__c.field-meta.xml
<CustomField>
    <fullName>CCR_PermissionSet__c</fullName>
    <description>Used by : CCR Description : Used to store mapping for JIT user creation/update</description>
    <label>Permission Set</label>
    <length>100</length>
    <type>Text</type>
</CustomField>