force-app/main/default/objects/CCR_JITUserProvisioning__mdt/fields/CCR_UsedFor__c.field-meta.xml
<CustomField>
    <fullName>CCR_UsedFor__c</fullName>
    <description>Used by : CCR, iRefer Description : Used to store mapping for JIT user creation/update</description>
    <label>UsedFor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>