force-app/main/default/objects/CCR_JITUserProvisioning__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>CCR_CountryCode__c</columns>
    <columns>CCR_Active__c</columns>
    <columns>CCR_PermissionSet__c</columns>
    <columns>CCR_UsedFor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>ko</language>
</ListView>